--- a/packages/docs/src/pages/tokens/colors.stories.mdx
+++ b/packages/docs/src/pages/tokens/colors.stories.mdx
@@ -1,10 +1,8 @@
 import { Meta } from '@storybook/addon-docs'
 import { ColorsGrid } from '../../components/ColorsGrid'
 
-<Meta title='Colors' />
+<Meta title='Tokens/Colors' />
 
 # Colors
-
-Cores do Ignite UI
 
 <ColorsGrid />
